#
# CrashReporter cmake file
#

project(CrashReporter)

file(GLOB_RECURSE CRASHREPORTER_SOURCES src/*.cpp src/*.c)
file(GLOB_RECURSE CRASHREPORTER_HEADERS src/*.h)
file(GLOB_RECURSE CRASHREPORTER_UIS src/*.ui)
file(GLOB CRASHREPORTER_TRANSLATIONS trans/*.ts)

qt5_add_translation(CRASHREPORTER_QM_FILES ${CRASHREPORTER_TRANSLATIONS})

#build
if (APPLE)

  set_source_files_properties( ${CRASHREPORTER_QM_FILES} PROPERTIES MACOSX_PACKAGE_LOCATION Resources/translations)

  add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${CRASHREPORTER_SOURCES} ${CRASHREPORTER_HEADERS} ${CRASHREPORTER_UIS} ${CRASHREPORTER_QM_FILES})

else ()
  set( CRASHREPORTER_ICON res/crashreporter.rc)

  add_executable(${PROJECT_NAME} WIN32 ${CRASHREPORTER_SOURCES} ${CRASHREPORTER_HEADERS} ${CRASHREPORTER_UIS} ${CRASHREPORTER_QM_FILES} ${CRASHREPORTER_ICON})

endif ()

target_link_libraries(${PROJECT_NAME} Qt5::Widgets Qt5::Network)
